--- a/tasks/Ubuntu/copy_php_cli_config.yml
+++ b/tasks/Ubuntu/copy_php_cli_config.yml
@@ -1,15 +1,15 @@
 --- # Ansible Role [PHP]: tasks.ubuntu.copy_php_cli_config (Axel Pardemann <axelitus@GitHub>)
-- name: Check if PHP {{ php.ver }} CLI extension is installed
-  command: dpkg-query -l php{{ php.ver }}-cli
+- name: Check if PHP {{ axelitus_php_ver }} CLI extension is installed
+  command: dpkg-query -l php{{ axelitus_php_ver }}-cli
   register: php_cli_exists
   failed_when: php_cli_exists.rc > 1
   changed_when: no
 
-- name: Copy PHP {{ php.ver }} CLI ini file if CLI installed
+- name: Copy PHP {{ axelitus_php_ver }} CLI ini file if CLI installed
   template:
-    src: "{{ phpcli.ini.template }}"
-    dest: "{{ phpcli.ini.path }}"
-    owner: "{{ phpcli.ini.owner }}"
-    group: "{{ phpcli.ini.group }}"
+    src: "{{ axelitus_php_cli_ini_template }}"
+    dest: "{{ axelitus_php_cli_ini_path }}"
+    owner: "root"
+    group: "root"
   when: php_cli_exists|succeeded
   register: php_copy_cli_ini
